Fixed horizontal scroll bug,changed notification color scheme,minor UI enhancements
Fixed horizontal scroll overflow bug in modernized wiki editor, round edges given to input fields in usersettings form and fixed moin-buttons for modernized theme

--- a/MoinMoin/themes/modernized/static/custom-less/modernized.less
+++ b/MoinMoin/themes/modernized/static/custom-less/modernized.less
@@ -217,3 +217,35 @@ input[type=number],
 #moin-content {
  font-size: 15px;
 }
+
+// Indicators =================================================================
+.alert {
+  border: none;
+  color: #fff;
+
+  &-success {
+    background-color: @brand-success;
+  }
+
+  &-info {
+    background-color: @brand-info;
+  }
+
+  &-warning {
+    background-color: @brand-warning;
+  }
+
+  &-danger {
+    background-color: @brand-danger;
+  }
+
+  a:not(.close),
+  .alert-link {
+    color: #fff;
+    font-weight: bold;
+  }
+
+  .close {
+    color: #fff;
+  }
+}
