--- a/MoinMoin/themes/modernized/static/custom-less/variables_modernized.less
+++ b/MoinMoin/themes/modernized/static/custom-less/variables_modernized.less
@@ -499,16 +499,16 @@
 @state-success-bg:               #dff0d8;
 @state-success-border:           darken(spin(@state-success-bg, -10), 5%);
 
-@state-info-text:                @brand-info;
-@state-info-bg:                  #e1bee7;
-@state-info-border:              darken(spin(@state-info-bg, -10), 7%);
+@state-info-text:                #3F51B5;
+@state-info-bg:                  #C5CAE9;
+@state-info-border:              darken(spin(@state-info-text, -10), 7%);
 
 @state-warning-text:             @brand-warning;
 @state-warning-bg:               #ffe0b2;
 @state-warning-border:           darken(spin(@state-warning-bg, -10), 5%);
 
-@state-danger-text:              @brand-danger;
-@state-danger-bg:                #f9bdbb;
+@state-danger-text:              #fff;
+@state-danger-bg:                #e51c23;
 @state-danger-border:            darken(spin(@state-danger-bg, -10), 5%);
 
 
